--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "WebApiDatabase": "Data Source=mssql Initial Catalog=dotnet-5-crud-api; User Id=sa; Password=@Passw0rd"
+        "WebApiDatabase": "Data Source=mssql; Initial Catalog=dotnet-5-crud-api; User Id=sa; Password=@Passw0rd"
     },
     "Logging": {
         "LogLevel": {
